--- a/build.gradle
+++ b/build.gradle
@@ -379,6 +379,7 @@ project('retz-inttest') {
 
             def mesos_package_name = 'mesos'
             if (mesos_version != null && ! mesos_version.isEmpty() ) {
+                // 1.1.1-2.0.1 and 1.0.3-2.0.1 are not supported
                 def supported_mesos_versions = ['1.2.1-2.0.1', '1.3.0-2.0.3']
                 if (! supported_mesos_versions.contains(mesos_version)) {
                     System.err.println("Mesos version should be one of " + supported_mesos_versions + " but is: " + mesos_version)
