Add default JVM options to retz-client, retz-admin and retz-server
When many retz-client processes are invoked at once in parallel such
as 30 or more, its initial heap size may pressure physical memory of
the machine even if they're just tiny commands. By minimizing initial
heap size with '-Xms' option, and preventing some of JVM optimizations
with '-client' option, those commands more processes can be invoked
at once.
Additionally '-server' option is added to retz-server.

Signed-off-by: UENISHI Kota <kuenishi@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -229,6 +229,7 @@ project(':retz-server') {
     }
 
     mainClassName = 'io.github.retz.scheduler.Launcher'
+    applicationDefaultJvmArgs = ["-server"]
 
     findbugs.excludeFilter = file("config/findbugs/excludeFilter.xml")
 
@@ -288,6 +289,8 @@ project(':retz-client') {
     }
 
     mainClassName = 'io.github.retz.cli.Launcher'
+    // Won't set max heap size as large file download may happen
+    applicationDefaultJvmArgs = ["-Xms8m", "-client"]
 
     ospackage {
         os = LINUX
@@ -327,6 +330,8 @@ project('retz-admin') {
     }
 
     mainClassName = 'io.github.retz.admin.Launcher'
+    // Won't set max heap size as large file download may happen
+    applicationDefaultJvmArgs = ["-Xms8m", "-client"]
 
     ospackage {
         os = LINUX
