Remove -server and -client option which are deprecated
Both -server and -client have no effect on 64bit JVM and they are
deprecated. Instead serial GC is to be used for clients.

Signed-off-by: UENISHI Kota <kuenishi@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -229,7 +229,6 @@ project(':retz-server') {
     }
 
     mainClassName = 'io.github.retz.scheduler.Launcher'
-    applicationDefaultJvmArgs = ["-server"]
 
     findbugs.excludeFilter = file("config/findbugs/excludeFilter.xml")
 
@@ -290,7 +289,7 @@ project(':retz-client') {
 
     mainClassName = 'io.github.retz.cli.Launcher'
     // Won't set max heap size as large file download may happen
-    applicationDefaultJvmArgs = ["-Xms8m", "-client"]
+    applicationDefaultJvmArgs = ["-Xms8m", "-XX:+UseSerialGC"]
 
     ospackage {
         os = LINUX
@@ -331,7 +330,7 @@ project('retz-admin') {
 
     mainClassName = 'io.github.retz.admin.Launcher'
     // Won't set max heap size as large file download may happen
-    applicationDefaultJvmArgs = ["-Xms8m", "-client"]
+    applicationDefaultJvmArgs = ["-Xms8m", "-XX:+UseSerialGC"]
 
     ospackage {
         os = LINUX
