Configurable recovery on reconnect

--- a/retz-server/src/test/resources/retz.properties
+++ b/retz-server/src/test/resources/retz.properties
@@ -25,6 +25,7 @@ retz.access.key = deadbeef
 retz.access.secret = cafebabe
 retz.schedule.results = file://path/to/dir/
 retz.schedule.retry = 5
+retz.recover-on-reconnect = false
 
 retz.max.list-jobs = 42
 retz.max.file-size = 12345
