--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,9 @@ buildscript {
         classpath 'com.netflix.nebula:gradle-ospackage-plugin:4.4.+'
         classpath "gradle.plugin.nl.javadude.gradle.plugins:license-gradle-plugin:0.14.0"
         classpath "gradle.plugin.com.github.spotbugs:gradlePlugin:1.6.0"
+        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.1'
     }
+
 }
 
 def gitVersion() {
@@ -20,8 +22,10 @@ def gitVersion() {
             "cd ${project.rootDir} ; git describe --always --tag"].execute().in.text.trim()
     versionText
 }
+def grpcVersion = '1.6.1'
 
 apply plugin: 'com.gradle.build-scan'
+apply plugin: 'idea'
 
 allprojects {
     apply plugin: 'java'
@@ -50,6 +54,7 @@ subprojects {
     apply plugin: 'checkstyle'
     apply plugin: 'maven'
     apply plugin: 'maven-publish'
+    apply plugin: 'com.google.protobuf'
 
     group = 'io.github.retz'
     // Note: You can't create RPM with hyphen included in version name
@@ -62,12 +67,12 @@ subprojects {
     dependencies {
         compile 'org.slf4j:slf4j-api:1.7.25'
 
-        testCompile 'junit:junit:4.12'
-        testCompile 'org.hamcrest:hamcrest-library:1.3'
-
         testCompile 'org.scalacheck:scalacheck_2.12:1.13.+'
         testCompile 'org.scalatest:scalatest_2.12:3.0.+'
         testCompile 'org.scala-lang:scala-library:2.12.+'
+
+        testCompile 'junit:junit:4.12'
+        testCompile 'org.hamcrest:hamcrest-library:1.3'
     }
 
     jar {
@@ -144,6 +149,26 @@ subprojects {
           into "$rootDir/build/all-test-report"
     }
     test.finalizedBy(copyReport)
+
+    protobuf {
+        protoc {
+            artifact = 'com.google.protobuf:protoc:3.3.0'
+        }
+        plugins {
+            grpc {
+                artifact = "io.grpc:protoc-gen-grpc-java:${grpcVersion}"
+            }
+        }
+        generateProtoTasks {
+            all()*.plugins {
+                grpc {
+                    // To generate deprecated interfaces and static bindService method,
+                    // turn the enable_deprecated option to true below:
+                    option 'enable_deprecated=false'
+                }
+            }
+        }
+    }
 }
 
 project(':retz-common') {
@@ -151,9 +176,26 @@ project(':retz-common') {
         compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.+'
         compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jdk8', version: '2.+'
 
+        compile "com.google.api.grpc:proto-google-common-protos:0.1.9"
+        compile "io.grpc:grpc-netty:${grpcVersion}"
+        compile "io.grpc:grpc-protobuf:${grpcVersion}"
+        compile "io.grpc:grpc-stub:${grpcVersion}"
+
         compile 'org.slf4j:slf4j-api:1.7.25'
         testCompile 'org.slf4j:slf4j-simple:1.7.25'
     }
+
+
+    idea {
+        module {
+            // Not using generatedSourceDirs because of
+            // https://discuss.gradle.org/t/support-for-intellij-2016/15294/8
+            sourceDirs += file("${buildDir}/generated/source/proto/main/java");
+            sourceDirs += file("${buildDir}/generated/source/proto/main/grpc");
+        }
+    }
+
+    findbugs.excludeFilter = file("config/findbugs/excludeFilter.xml")
 }
 
 def makePropertyFile(basedir, testType, name, version) {
@@ -222,6 +264,9 @@ project(':retz-server') {
         compile 'com.sparkjava:spark-core:2.6.0'
         compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.9'
 
+        compile "io.grpc:grpc-core:${grpcVersion}"
+        compile "io.grpc:grpc-stub:${grpcVersion}"
+
         compile 'com.h2database:h2:1.4.+'
         compile group: 'org.postgresql', name: 'postgresql', version: '42.1.+'
         compile group: 'org.apache.tomcat', name: 'tomcat-jdbc', version: '8.5.+'
@@ -286,6 +331,9 @@ project(':retz-client') {
         compile project(":retz-common")
         compile 'org.slf4j:slf4j-api:1.7.25'
         compile 'org.slf4j:slf4j-simple:1.7.25'
+
+        compile "io.grpc:grpc-core:${grpcVersion}"
+        compile "io.grpc:grpc-stub:${grpcVersion}"
 
         compile "com.beust:jcommander:1.72"
         compile 'commons-io:commons-io:2.5'
