--- a/retz-client/src/test/resources/retz.properties
+++ b/retz-client/src/test/resources/retz.properties
@@ -15,7 +15,8 @@
 #    limitations under the License.
 #
 
-retz.server.uri  = http://localhost:9090
+#retz.server.uri  = http://localhost:9090
+retz.server.uri  = grpc://localhost:50001
 retz.authentication = true
 retz.access.key = deadbeef
 retz.access.secret = cafebabe
