--- a/build.gradle
+++ b/build.gradle
@@ -52,7 +52,7 @@ subprojects {
 
     group = 'io.github.retz'
     // Note: You can't create RPM with hyphen included in version name
-    version = '0.4.1-SNAPSHOT'
+    version = '0.4.1'
     sourceCompatibility = '1.8'
     targetCompatibility = '1.8'
 
