Change retz.bind => retz.http.bind

--- a/retz-common/src/test/resources/retz.properties
+++ b/retz-common/src/test/resources/retz.properties
@@ -16,7 +16,7 @@
 #
 
 retz.mesos = 123.23.43.356:23563
-retz.bind = https://234.34.34.2:23452
+retz.http.bind = https://234.34.34.2:23452
 retz.authentication = true
 retz.access.key = cafebabe
 retz.access.secret = deadbeef
