--- a/retz-inttest/src/test/resources/docker/retz-postgres.properties
+++ b/retz-inttest/src/test/resources/docker/retz-postgres.properties
@@ -27,7 +27,7 @@ retz.mesos.principal = retz
 ## retz.user = nobody
 
 ## A URL and port number to listen
-retz.bind  = http://##IP##:19090
+retz.http.bind  = http://##IP##:19090
 ## Authentication
 retz.authentication = true
 ## Define admin key and secret
