--- a/retz-inttest/src/test/resources/docker/retz.properties
+++ b/retz-inttest/src/test/resources/docker/retz.properties
@@ -16,7 +16,7 @@
 #
 
 retz.mesos = ##IP##:15050
-retz.bind  = http://##IP##:19090
+retz.http.bind  = http://##IP##:19090
 retz.queue.max = 65536
 retz.authentication = true
 retz.access.key = deadbeef
