--- a/retz-inttest/src/test/resources/retz-persistent.properties
+++ b/retz-inttest/src/test/resources/retz-persistent.properties
@@ -26,7 +26,7 @@ retz.mesos = 127.0.0.1:15050
 ## retz.gpu = false
 
 ## A URL and port number to listen
-retz.bind  = http://127.0.0.1:19090
+retz.http.bind  = http://127.0.0.1:19090
 ## Authentication
 retz.authentication = true
 ## Define admin key and secret
