--- a/retz-inttest/src/test/resources/retz.properties
+++ b/retz-inttest/src/test/resources/retz.properties
@@ -16,7 +16,7 @@
 #
 
 retz.mesos = 127.0.0.1:15050
-retz.bind  = http://127.0.0.1:19090
+retz.http.bind  = http://127.0.0.1:19090
 retz.authentication = true
 retz.access.key = deadbeef
 retz.access.secret = cafebabe
