--- a/retz-server/src/test/resources/retz-tls.properties
+++ b/retz-server/src/test/resources/retz-tls.properties
@@ -17,7 +17,9 @@
 
 retz.mesos = example.com:5050
 retz.mesos.principal = retz
-retz.bind  = https://localhost:9091
+retz.http.bind = https://localhost:9091
+retz.grpc.bind = grpc://localhost:9093\
+   
 retz.queue.max = 65536
 retz.schedule.results = file://path/to/dir/
 retz.schedule.retry = 5
