--- a/retz-inttest/src/test/resources/docker/retz-persistent.properties
+++ b/retz-inttest/src/test/resources/docker/retz-persistent.properties
@@ -26,7 +26,7 @@ retz.mesos = ##IP##:15050
 ## retz.gpu = false
 
 ## A URL and port number to listen
-retz.bind  = http://##IP##:19090
+retz.http.bind  = http://##IP##:19090
 ## Authentication
 retz.authentication = true
 ## Define admin key and secret
