--- a/retz-inttest/src/test/resources/docker/retz-zk.properties
+++ b/retz-inttest/src/test/resources/docker/retz-zk.properties
@@ -16,7 +16,7 @@
 #
 
 retz.mesos = zk://127.0.0.1:2181/mesos
-retz.bind  = http://##IP##:19090
+retz.http.bind  = http://##IP##:19090
 retz.authentication = true
 retz.access.key = deadbeef
 retz.access.secret = cafebabe
