--- a/retz-server/src/test/resources/retz-noauth.properties
+++ b/retz-server/src/test/resources/retz-noauth.properties
@@ -17,7 +17,7 @@
 
 retz.mesos = example.com:5050
 retz.mesos.principal = retz
-retz.bind  = http://localhost:9091
+retz.http.bind  = http://localhost:9091
 retz.max.stock = 0
 retz.authentication = false
 retz.access.key = deadbeef
