--- a/retz-server/src/test/resources/retz.properties
+++ b/retz-server/src/test/resources/retz.properties
@@ -17,7 +17,7 @@
 
 retz.mesos = mesos.example.com:5050
 retz.mesos.principal = retz
-retz.bind  = http://localhost:9090
+retz.http.bind  = http://localhost:9090
 retz.queue.max = 65536
 retz.authentication = true
 retz.max.stock = 0
